# aws-data-lake-pipeline

./: README.md  app.py  cdk.json  deployment.py  package-lock.json  package.json  pipeline.py  pyproject.toml
data/: SalesOrders.csv_split_aa  SalesOrders.csv_split_ab  SalesOrders.csv_split_ac  SalesOrders.csv_split_ad  SalesOrders.csv_split_ae  SalesOrders.csv_split_af  SalesOrders.csv_split_ag  SalesOrders.csv_split_ah  SalesOrders.csv_split_ai  SalesOrders.csv_split_aj  SalesOrders.csv_split_ak  SalesOrders.csv_split_al  SalesOrders.csv_split_am
datalake/: infrastructure.py
etl/: infrastructure.py
job-scripts/: transform.py
scripts/: upload-files.sh  upload-files2.sh
